# bachelor

VSBachelor/: .gitignore  README.md  pyproject.toml  tasks.py
VSBachelor/configs/: lora_sweep.yaml
VSBachelor/src/lora/: clf_util.py  ex_week_10_solution.ipynb  ex_week_10_utils.py  lora.ipynb  relativerep.ipynb  relativerep_text.ipynb
VSBachelor/src/lora/models/: model1_ae.pth  model2_ae.pth
